# ielts-speaking-tailor

./: .gitignore  README.md  pyproject.toml
docs/: usage.md
src/ielts_tailor/: __init__.py  bank.py  cli.py  coverage.py  generation.py  openai_client.py  profile_builder.py  questionnaire.py  rendering.py  strategy.py  web.py
src/ielts_tailor/web_assets/: app.js  index.html  styles.css
tests/: test_bank_parser.py  test_coverage_and_profile.py  test_generation.py  test_openai_client.py  test_rendering_and_cli.py  test_strategy.py  test_web.py
